--- a/PetMate/src/components/ModalAnalisarCores.css
+++ b/PetMate/src/components/ModalAnalisarCores.css
@@ -70,7 +70,7 @@
     background-color: rgba(255, 255, 255, 0.2);
 }
 
-.modal-content {
+.conteudo-modal-analisar {
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -179,32 +179,33 @@
     }
 }
 
-.tips-section {
+.container-dicas {
     background: #f8f9fa;
     padding: 20px;
     border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     /* border-left: 4px solid #84644D; */
 }
 
-.tips-section h4 {
+.container-dicas h4 {
     margin: 0 0 15px 0;
     color: #84644D;
     font-size: 1.5rem;
 }
 
-.tips-section ul {
+.container-dicas ul {
     margin: 0;
     padding-left: 0;
     list-style: none;
 }
 
-.tips-section li {
+.container-dicas li {
     color: #666;
     margin-bottom: 8px;
     font-size: 1.2rem;
 }
 
-.analisar-section {
+.container-analise {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -228,25 +229,26 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-.analisar-content {
+.conteudo-analise {
     background: #fff;
     /* padding: 25px; */
     /* border-radius: 15px; */
     /* border: 2px solid #f0f0f0; */
 }
 
-.analisar-text {
+.texto-analise {
     /* line-height: 1.6; */
     color: #333;
     font-size: 1.1rem;
+    text-align: center;
 }
 
-.analisar-text strong {
+.texto-analise strong {
     color: #84644D;
     font-weight: 600;
 }
 
-.analisar-text br {
+.texto-analise br {
     margin-bottom: 2px;
 }
 
