--- a/PetMate/src/pages/Carrinho.css
+++ b/PetMate/src/pages/Carrinho.css
@@ -30,13 +30,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: #FFF; */
     justify-content: flex-start;
     border: 3px solid #9C7A5E;
     border-radius: 20px;
-    max-height: 70vh;
+    /* max-height: 70vh; */
     width: 75vw;
     padding: 20px;
+    backdrop-filter: blur(5px);
 }
 
 .produtos-adicionados h2 {
@@ -44,7 +44,7 @@
     color: #84644D;
     margin-bottom: 20px;
     font-weight: 800;
-    font-family: 'Raleway';
+    font-family: 'Nunito';
     margin-top: 0;
 }
 
@@ -53,12 +53,12 @@
     color: #84644D;
     margin-bottom: 10px;
     font-weight: 650;
-    font-family: 'Raleway';
+    font-family: 'Nunito';
 }
 
 .subtotal{
     border: 3px solid #9C7A5E;
-    background-color: #FFFFFF;
+    background-color: #F5F5F5;
     border-radius: 20px;
     height: 400px;
     width: 25%;
@@ -69,7 +69,7 @@
     color: #84644D;
     margin-bottom: 10px;
     font-weight: 800;
-    font-family: 'Raleway';
+    font-family: 'Nunito';
     margin-left: 50px;
     margin-top: 12px;
 }
