--- a/PetMate/src/components/CardItemCarrinho.css
+++ b/PetMate/src/components/CardItemCarrinho.css
@@ -48,14 +48,14 @@
 }
 
 .nome-preco-item b {
-    font-size: 16px;
+    font-size: 20px;
     color: #84644D;
     font-family: 'Raleway';
     font-weight: 800;
 }
 
-.nome-preco-item > span {
-    font-size: 14px;
+.nome-preco-item>span {
+    font-size: 18px;
     color: #654833;
     /* font-family: 'Open Sans'; */
     font-weight: 600;
@@ -65,8 +65,35 @@
     font-size: 20px !important;
     color: #888 !important;
     font-weight: 500 !important;
-    /* margin-top: 2px; */
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+    justify-content: flex-start;
     padding-left: 4rem;
+    flex-wrap: wrap;
+    /* margin-top: 2px; */
+}
+
+.chips-coleira {
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    /* border: solid 1px #CCC; */
+    padding: 4px 10px;
+    font-size: 18px;
+    color: #654833;
+    border-radius: 14px;
+    background-color: #F3F0ED;
+}
+
+.linha-chips-1,
+.linha-chips-2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 10px;
+    /* border: solid; */
+    width: 100%;
 }
 
 .cores-item {
@@ -94,10 +121,10 @@
     gap: 12px;
     border: 1px solid #654833;
     padding: 8px 12px;
+    color: #654833;
     border-radius: 14px;
     background-color: #F3F0ED;
-    color: #654833;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 600;
 }
 
@@ -136,6 +163,7 @@
     align-items: center;
     justify-content: space-evenly;
     width: 33%;
+    font-size: 20px;
     /* border: solid; */
     /* gap: 5rem; */
 }
