--- a/PetMate/src/pages/Carrinho.css
+++ b/PetMate/src/pages/Carrinho.css
@@ -19,12 +19,16 @@
 .container-produtos {
     display: flex;
     flex-direction: column;
-    /* gap: 35px; */
     justify-content: center;
     align-items: center;
-
+    width: fit-content;
+    margin: auto;
+    margin-bottom: 2rem;
+    border-radius: 20px;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+    /* border: solid; */
+    /* gap: 35px; */
     /* margin-bottom: 100px; */
-
     /* padding: 0 10px; */
     /* padding-left: 10px; */
     /* padding-right: 10px; */
@@ -45,8 +49,11 @@
 }
 
 .produto-title {
+    display: flex;
+    flex-direction: row;
     width: 70%;
     padding-left: 2rem;
+    /* justify-content: space-evenly; */
     /* border: solid; */
 }
 
@@ -55,8 +62,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    /* width: 29%; */
     gap: 1rem;
+    /* width: 29%; */
     /* padding-left: 1.5vw; */
     /* border: solid; */
 }
@@ -69,10 +76,12 @@
     border: 3px solid #9C7A5E;
     border-radius: 20px;
     width: 60vw;
-    padding: 5px;
+    padding: 10px 0;
     background-color: #F5F5F5;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+
+    /* padding: 5px; */
     /* max-height: 70vh; */
     /* backdrop-filter: blur(5px); */
 }
@@ -89,13 +98,14 @@
 .produtos-adicionados p {
     font-size: 25px;
     color: #84644D;
-    /* margin-bottom: 10px; */
     font-weight: 650;
     font-family: 'Nunito';
+    /* margin-bottom: 10px; */
 }
 
 .subtotal {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 3px solid #9C7A5E;
@@ -104,10 +114,9 @@
     border-radius: 20px;
     height: 200px;
     width: 60vw;
-    margin-bottom: 2rem;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-    gap: 10px;
+    /* gap: 10px; */
 }
 
 .subtotal p {
@@ -120,11 +129,11 @@
     margin-top: 12px;
 }
 
-.fecharPedido {
+.btn-fechar-pedido {
     background-color: #654833;
     color: white;
     border: none;
-    padding: 1rem 1.5rem;
+    padding: 0.7rem 1.7rem;
     border-radius: 15px;
     font-weight: bold;
     cursor: pointer;
@@ -135,23 +144,50 @@
     justify-content: center;
     white-space: nowrap;
     min-width: fit-content;
+    transition: 0.3s ease;
     /* margin-top: 200px; */
     /* margin-left: 120px; */
     /* margin-bottom: 20px; */
 }
 
+.btn-fechar-pedido:hover {
+    background-color: #5d402c;
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+    color: #CCC;
+
+}
+
 .container-cards-itens {
     display: flex;
     flex-direction: column;
+    max-height: 100%;
+    width: 100%;
+    padding: 5px 0;
+    /* min-height: 10vh; */
     /* grid-template-columns: repeat(4, 1fr); */
     /* gap: 20px; */
-    width: 100%;
-    /* padding: 10px 0; */
-    max-height: 100%;
     /* border-top: 3px solid #9C7A5E; */
     /* overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: #84644D #f1f1f1; */
+}
+
+.sem-itens {
+    min-height: 10vh;
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    color: #654833;
+    font-weight: 500;
+    background-color: #F5F5F5;
+    width: fit-content;
+    padding: 0 15px;
+    border-radius: 20px;
+    border: solid 3px #9C7A5E;
+    margin-bottom: 2rem;
 }
 
 @media (max-width: 1400px) {
