--- a/PetMate/src/pages/Carrinho.css
+++ b/PetMate/src/pages/Carrinho.css
@@ -173,21 +173,30 @@
 }
 
 .sem-itens {
-    min-height: 10vh;
+    /* min-height: 10vh; */
     display: flex;
     flex-direction: row;
     margin: auto;
     justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
-    color: #654833;
     font-weight: 500;
-    background-color: #F5F5F5;
     width: fit-content;
-    padding: 0 15px;
-    border-radius: 20px;
-    border: solid 3px #9C7A5E;
     margin-bottom: 2rem;
+    font-size: 24px;
+    font-weight: bold;
+    color: #84644D;
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #F6F4F1;
+    border: 2px solid #AD947E;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    gap: 5px;
+}
+
+.icon-warn-itens {
+    font-size: 2rem;
 }
 
 @media (max-width: 1400px) {
